--- a/MaxisGetIt/res/layout/header_with_popdown_search.xml
+++ b/MaxisGetIt/res/layout/header_with_popdown_search.xml
@@ -74,7 +74,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/vertical_line_seprator" />
+        android:background="@color/vertical_line_seprator" 
+        android:visibility="gone"/>
 
     <TextView
         style="@style/common_style_for_beta_version_header"
@@ -95,13 +96,14 @@
             android:background="@color/header_bg_color"
             android:gravity="center_horizontal"
             android:visibility="gone" >
-
+<!--   INCLUDED IN BELOW LAYOUT
+              android:layout_margin="10dp"
+                android:layout_marginLeft="2dp" -->
+            
             <EditText
                 android:id="@+id/search_box"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_marginLeft="2dp"
                 android:layout_weight=".90"
                 android:background="@drawable/search_bar"
                 android:drawableLeft="@drawable/search_iconleft"
