--- a/MaxisGetIt/res/layout/home_category_row_layout.xml
+++ b/MaxisGetIt/res/layout/home_category_row_layout.xml
@@ -54,4 +54,12 @@
 <!--             android:layout_marginBottom="15dp"
             android:layout_marginTop="15dp" -->
 
+
+<View 
+    android:id="@+id/seprator"
+    android:layout_height="1dp"
+    android:layout_width="match_parent"
+    android:background="@drawable/single_line_seprator"
+    android:visibility="visible"
+    />
 </LinearLayout>
