--- a/trunk/MaxisGetIt/res/layout/header_base_screen.xml
+++ b/trunk/MaxisGetIt/res/layout/header_base_screen.xml
@@ -27,7 +27,7 @@
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:clickable="true"
-            android:src="@drawable/findit_header_logo" />
+            android:src="@drawable/logo1" />
 
         <ImageView
             android:id="@+id/show_profile_icon"
@@ -43,7 +43,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/vertical_line_seprator" />
+        android:background="@color/vertical_line_seprator"
+        android:visibility="gone" />
 
     <TextView
         style="@style/common_style_for_beta_version_header"
@@ -59,8 +60,6 @@
             android:id="@+id/search_box"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_marginLeft="2dp"
             android:layout_weight=".9"
             android:background="@drawable/search_bar"
             android:drawableLeft="@drawable/search_iconleft"
