--- a/trunk/MaxisGetIt/res/layout/header_without_search.xml
+++ b/trunk/MaxisGetIt/res/layout/header_without_search.xml
@@ -12,13 +12,17 @@
         android:paddingTop="5dp" >
 
         <ImageView
+            android:id="@+id/backbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:paddingRight="5dp" />
+            android:src="@drawable/back_btn1"
+            android:layout_marginLeft="5dp"
+            android:paddingRight="5dp"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/goto_home_icon"
@@ -27,7 +31,7 @@
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:clickable="true"
-            android:src="@drawable/findit_header_logo" />
+            android:src="@drawable/logo1" />
 
         <ImageView
             android:id="@+id/show_profile_icon"
