--- a/MaxisGetIt/res/layout/activity_deal_detail.xml
+++ b/MaxisGetIt/res/layout/activity_deal_detail.xml
@@ -26,6 +26,7 @@
             android:paddingTop="0dp"
             android:weightSum="1" >
 
+            
             <android.support.v4.view.ViewPager
                 android:id="@+id/dealtopbanner"
                 android:layout_width="match_parent"
@@ -57,7 +58,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/cd_name_header"
+                android:background="@color/new_footer_color"
                 android:orientation="horizontal"
                 android:paddingBottom="5dp"
                 android:paddingLeft="10dp"
@@ -82,6 +83,7 @@
                             android:ellipsize="end"
                             android:maxLines="2"
                             android:paddingRight="10dp"
+                            android:paddingTop="10dp"
                             android:singleLine="false"
                             android:textColor="@color/white"
                             android:textSize="@dimen/sp_15"
@@ -103,7 +105,8 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
-                                    android:layout_weight=".64"
+                                    android:layout_weight=".65"
+                                    android:paddingTop="10dp"
                                     android:singleLine="true"
                                     android:text="valid in entire malasia"
                                     android:textColor="@color/white" />
@@ -116,17 +119,18 @@
                                     android:layout_marginLeft="5dp"
                                     android:layout_marginRight="5dp"
                                     android:background="@color/bar_light_grey"
-                                    android:visibility="visible" />
+                                    android:visibility="gone" />
 
                                 <TextView
                                     android:id="@+id/validdate"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
-                                    android:layout_marginRight="3dp"
-                                    android:layout_weight=".36"
+                                    android:layout_weight=".35"
+                                    android:gravity="right"
+                                    android:paddingTop="10dp"
                                     android:singleLine="true"
-                                    android:text="@string/txt_rate_me"
+                                    android:text="Till 10 May 2014"
                                     android:textColor="@color/white"
                                     android:visibility="visible" />
                             </LinearLayout>
@@ -135,101 +139,120 @@
                 </LinearLayout>
             </RelativeLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/green" />
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:background="@color/white"
                 android:gravity="center"
                 android:orientation="horizontal" >
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                <TextView
+                    android:id="@+id/about_deal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/green"
                     android:gravity="center"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp" >
+                    android:text="About Deal"
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/about_deal"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:background="@drawable/left_btnselected"
-                        android:clickable="true"
-                        android:text=""
-                        android:textColor="@color/black" />
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/green" />
 
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:background="@color/green"
-                        android:padding="5dp"
-                        android:visibility="gone" />
+                <TextView
+                    android:id="@+id/nearest_outlet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Nearest Outlet"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/nearest_outlet"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:background="@drawable/center_btn"
-                        android:padding="5dp"
-                        android:textColor="@color/black" />
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/green" />
 
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:background="@color/green"
-                        android:padding="5dp"
-                        android:visibility="gone" />
-
-                    <TextView
-                        android:id="@+id/tnc"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:background="@drawable/right_btn"
-                        android:padding="5dp"
-                        android:singleLine="true"
-                        android:textColor="@color/black" />
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/deal_all_outlet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="View all Outlets"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/grey" />
+                android:layout_height="1dp"
+                android:background="@color/green" />
 
             <TextView
                 android:id="@+id/deal_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ebebeb"
+                android:gravity="center_vertical"
                 android:padding="10dp"
                 android:text="Use your Maybank Card to avail a discount of flat 20% on food and beverages at BBQ Plaza.\nThis offer cannot be clubbed with any otheroffer."
-                android:textColor="#808080" />
+                android:textColor="#808080"
+                android:visibility="visible" />
+
+            <include
+                android:id="@+id/nearestLayout"
+                layout="@layout/outlet_list_item"
+                android:visibility="gone" />
 
             <View
-    			android:id="@+id/outlet_seprator"
+                android:id="@+id/outlet_seprator"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/grey" 
-                android:visibility="gone"/>
+                android:background="@color/grey"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/outlets_names"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ebebeb"
-                android:orientation="vertical" >
+                android:layout_height="fill_parent"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:visibility="gone" >
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <View
+                        android:id="@+id/trans_img"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                    <ListView
+                        android:id="@+id/outlets_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="fill_parent"
+                        android:divider="@color/bar_light_grey"
+                        android:dividerHeight="0dp" >
+                    </ListView>
+                </FrameLayout>
             </LinearLayout>
 
             <TextView
+                android:id="@+id/mapLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/cd_name_header"
+               android:background="@color/new_footer_color"
                 android:padding="5dp"
                 android:paddingLeft="10dp"
                 android:text="Map"
@@ -237,64 +260,171 @@
                 android:textSize="@dimen/sp_15"
                 android:textStyle="bold" />
 
-            <FrameLayout
-                android:id="@+id/frame_layout"
+            <LinearLayout
+                android:id="@+id/mapLayout"
                 android:layout_width="match_parent"
-                android:layout_height="300dp" >
+                android:layout_height="wrap_content"
+                android:background="@drawable/view_on_map_image"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:visibility="visible" >
 
-                <fragment
-                    android:id="@+id/map"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    class="com.google.android.gms.maps.SupportMapFragment" />
+                <TextView
+                    android:id="@+id/viewOnMap_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/view_on_map_btn" />
 
-                <View
-                    android:id="@+id/trans_img"
+                <FrameLayout
+                    android:id="@+id/frame_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </FrameLayout>
+                    android:layout_height="300dp"
+                    android:visibility="gone" >
+
+                    <fragment
+                        android:id="@+id/map"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        class="com.google.android.gms.maps.SupportMapFragment" />
+
+                    <View
+                        android:id="@+id/trans_img"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </FrameLayout>
+            </LinearLayout>
         </LinearLayout>
     </com.kelltontech.maxisgetit.ui.widgets.CustomScrollView>
 
     <LinearLayout
+        android:id="@+id/leftOutletLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/cl_deals_footer"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/rectangleborderblack"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:visibility="visible" >
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical" >
+
+            <ImageView
+                android:id="@+id/cross_btn"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="right|top"
+                android:layout_marginLeft="5dp"
+                android:clickable="true"
+                android:src="@drawable/cross_icon" />
+
+            <TextView
+                android:id="@+id/outlets_count"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                android:paddingTop="5dp"
+                android:text="9"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </FrameLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:paddingBottom="5dp"
+            android:paddingLeft="18dp"
+            android:paddingRight="22dp"
+            android:text="Outlets"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/rightlayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/cl_deals_footer"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/rectanglebordergreen"
+        android:gravity="center_vertical"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/view_on_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:paddingBottom="14dp"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
+            android:paddingTop="15dp"
+            android:text="View On Map"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/cl_deals_footer"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:visibility="visible"
-        android:weightSum="1" >
+        android:orientation="vertical"
+        android:visibility="visible" >
 
-        <TextView
-            android:id="@+id/deal_download"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:background="@color/transparent_footer_blue"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="Get Info"
-            android:textColor="@color/transparent_white"
-            android:textSize="@dimen/sp_14"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:id="@+id/cl_deals_footer"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"
+            android:visibility="visible"
+            android:weightSum="1" >
 
-        <ImageView
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/bar_light_grey" />
+            <TextView
+                android:id="@+id/deal_download"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:background="@color/new_footer_color"
+                android:clickable="true"
+                android:gravity="center"
+                android:text="Get Info"
+                android:textColor="@color/transparent_white"
+                android:textSize="@dimen/sp_14"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/deal_all_outlet"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:background="@color/transparent_footer_blue"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="View All Outlets"
-            android:textColor="@color/transparent_white"
-            android:textSize="@dimen/sp_14"
-            android:textStyle="bold" />
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/bar_light_grey" />
+
+            <TextView
+                android:id="@+id/tnc"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:background="@color/new_footer_color"
+                android:clickable="true"
+                android:gravity="center"
+                android:text="Terms and Condition"
+                android:textColor="@color/transparent_white"
+                android:textSize="@dimen/sp_14"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
