--- a/trunk/MaxisGetIt/res/layout/activity_company_detail.xml
+++ b/trunk/MaxisGetIt/res/layout/activity_company_detail.xml
@@ -160,7 +160,7 @@
                 -->
             </LinearLayout>
 
-            <ImageView
+            <!-- <ImageView
                 android:id="@+id/cd_comp_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -171,7 +171,38 @@
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
                 android:paddingTop="4dp"
+                android:src="@drawable/detail_cross" /> -->
+            <android.support.v4.view.ViewPager
+                android:id="@+id/comp_image_pager"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:paddingBottom="9dp"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:paddingTop="4dp"
                 android:src="@drawable/detail_cross" />
+
+            <LinearLayout
+                android:id="@+id/indicatorlinearlayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|bottom"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/rounded_layout"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp" >
+            </LinearLayout>
+            
+            
+            
+            
             <!-- android:background="@drawable/shape_flat_box" -->
 
             <RelativeLayout
