--- a/MaxisGetIt/res/layout/company_list_row.xml
+++ b/MaxisGetIt/res/layout/company_list_row.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
+
     <LinearLayout
         android:id="@+id/cl_row_base_layout"
         android:layout_width="match_parent"
@@ -11,102 +12,103 @@
         android:background="@drawable/selector_home_list_item_bg"
         android:paddingBottom="5dp"
         android:paddingLeft="5dp"
-        android:layout_toLeftOf="@+id/videoIcon"
         android:paddingTop="5dp" >
-        <!--
-                 android:layout_width="wrap_content"
-            android:layout_height="match_parent"        -->
+
         <ImageView
             android:id="@+id/cl_company_image"
             android:layout_width="65dp"
             android:layout_height="65dp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/comp_list_loading" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:orientation="vertical"
             android:paddingLeft="5dp" >
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
+
                 <TextView
                     android:id="@+id/cl_comp_distance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="10dp"
                     android:layout_marginLeft="10dp"
-                    android:textStyle="bold"
-                    
+                    android:layout_marginRight="10dp"
                     android:singleLine="true"
-                    android:textSize="@dimen/sp_13" />
+                    android:textSize="@dimen/sp_13"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/cl_company_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
+                    android:layout_toLeftOf="@id/cl_comp_distance"
                     android:ellipsize="end"
                     android:singleLine="true"
+                    android:textColor="@color/head_title_col"
                     android:textSize="@dimen/sp_13"
-                    android:textStyle="bold"
-                    android:textColor="@color/head_title_col" 
-                    android:layout_toLeftOf="@id/cl_comp_distance"/>
-                
+                    android:textStyle="bold" />
             </RelativeLayout>
+
             <TextView
                 android:id="@+id/cl_company_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:textSize="@dimen/sp_12"
-                android:textColor="@color/app_txt" 
-                />
+                android:textColor="@color/app_txt"
+                android:textSize="@dimen/sp_12" />
+
             <TextView
                 android:id="@+id/cl_comp_addi_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/app_txt" 
+                android:ellipsize="end"
+                android:maxEms="20"
                 android:singleLine="true"
-               android:ellipsize="end"
-               android:maxEms="20"
+                android:textColor="@color/app_txt"
                 android:textSize="@dimen/sp_12" />
-             <TextView
+
+            <TextView
                 android:id="@+id/cl_comp_addi_info2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/app_txt" 
                 android:singleLine="true"
+                android:textColor="@color/app_txt"
                 android:textSize="@dimen/sp_12" />
-            <!--
-                 <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >            -->
-            <RatingBar
-                android:id="@+id/cl_comp_rating"
-                style="@style/customFeedbackRatingBar"
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:isIndicator="true"
-                android:numStars="5"
-                android:rating="0"
-                android:stepSize="0.5" />
-            <!-- </RelativeLayout> -->
+                android:orientation="horizontal" >
+
+                <RatingBar
+                    android:id="@+id/cl_comp_rating"
+                    style="@style/customFeedbackRatingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:rating="0"
+                    android:stepSize="0.5" />
+
+                <ImageView
+                    android:id="@+id/videoIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_gravity="center_vertical|center"
+                    android:src="@drawable/video_icon"
+                    android:visibility="visible" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    
-    <ImageView 
-        android:id="@+id/videoIcon"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/video_icon"
-        android:layout_centerInParent="true"
-        android:layout_marginRight="5dp"
-        android:visibility="visible"
-        />
-    
+
 </RelativeLayout>
